Add: set expires by providing a timestamp. phpcs and psalm configs and deps.

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "psr-4": {
             "Yakubenko\\JTokens\\": "src/"
         }
+    },
+    "require-dev": {
+        "vimeo/psalm": "^4.6"
     }
 }
